fix horizontal scroll on home page

--- a/components/_main-views/home/home.module.scss
+++ b/components/_main-views/home/home.module.scss
@@ -37,9 +37,9 @@
 
   :global {
     .kitten-summary {
-      max-width: 1000px;
-      min-width: 800px;
-      @apply grid;
+      @apply 
+      max-w-full
+      grid;
 
       &:not(last-child) {
         @apply mb-10;
